@@ -3,6 +3,8 @@
 * Detect checkboxes, both as complex fields and structured document tags, and
   convert them to checkbox inputs.
 
+* Ignore AlternateContent elements when there is no Fallback element.
+
 # 1.8.0
 
 * Add style mapping for highlights.
